--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.19.2",
     "firebase-admin": "^12.1.1",
     "jsonwebtoken": "^9.0.2",
